--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
-    "react-pdf": "^9.1.0",
+    "react-pdf": "8.0.0",
     "swiper": "^11.1.5"
   },
   "devDependencies": {
